2022-06-19  G. Branden Robinson <g.branden.robinson@gmail.com>

	[libgroff]: Update return type of `font::load_desc` function to
	enable more informative diagnostics from callers.

	* src/include/font.h (font::load_desc): Change return type from
	`bool` to `const char` pointer.
	* src/libs/libgroff/font.cpp (font::load_desc): Return null
	pointer literal on failed `open()` or validation failures.
	Return filespec on success.

	* src/libs/libdriver/input.cpp (do_file):
	* src/preproc/grn/main.cpp (getres):
	* src/roff/groff/groff.cpp (main):
	* src/roff/troff/input.cpp (main): Compare `font::load_desc()`
	return value to null pointer literal instead of treating it as a
	Boolean.

	* src/roff/groff/groff.cpp (main): Report full filespec of
	troublesome "DESC" file when complainiing of missing "postpro"
	directive.

2022-06-18  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/groff.cpp: Add new Boolean global,
	`need_postdriver`, and initialize it true.
	(main): Make `need_postdriver` false if the `-X` or `-Z` options
	are given.  Test it later.  This prevents groff from exiting
	with a fatal error if an output driver is not available, but
	also not required.  Also reorder null pointer equality
	comparison to avoid inadvertent lvalue assignment.

	Fixes <https://savannah.gnu.org/bugs/?62640>.

2022-06-16  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/groff.cpp (help): Revise usage message for
	expressiveness and clarity.

2022-06-10  Deri James  <deri@chuzzlewit.myzen.co.uk>

	[gropdf]: Correct display of pathnames used.

	* font/devpdf/util/BuildFoundries.pl: Convert array to
	string of pathnames.

2022-06-10  Deri James  <deri@chuzzlewit.myzen.co.uk>

	[gropdf]: Fix to gropdf.

	* src/devices/gropdf/gropdf.pl: If pdfbookmark was called
	within 5p of top of page (e.g. straight after a .bp when
	\n[nl] was zero) the click destination would be off by a
	page.

2022-06-19  Ingo Schwarze <schwarze@openbsd.org>
